<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".presentation.ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_custom_login"
        android:padding="@dimen/margin_16_dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/roboto_bold_14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_12_dp"
            android:layout_marginTop="@dimen/margin_24_dp"
            android:text="@string/str_login"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/margin_18_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:id="@+id/ll_form_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20_dp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/margin_20_dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:layout_editor_absoluteX="13dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                style="@style/defaultInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_email"
                android:theme="@style/defaultInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    style="@style/roboto_regular_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textEmailAddress"
                    android:maxLength="150"
                    android:textColor="@color/text_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/defaultInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_password"
                android:theme="@style/defaultInput"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/roboto_regular_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textPassword"
                    android:maxLength="150"
                    android:textColor="@color/text_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot"
                style="@style/roboto_regular_12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_10_dp"
                android:padding="@dimen/margin_4_dp"
                android:text="@string/str_forgot_password"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/AppApplyButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45_dp"
                android:layout_marginStart="@dimen/margin_16_dp"
                android:layout_marginTop="@dimen/margin_30_dp"
                android:layout_marginEnd="@dimen/margin_16_dp"
                android:enabled="true"
                android:maxLines="1"
                android:text="@string/str_button_login"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/text_view_documents" />

            <TextView
                style="@style/roboto_regular_12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_12_dp"
                android:layout_marginTop="@dimen/margin_10_dp"
                android:text="@string/str_still_don_t_have_an_account"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/roboto_regular_12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_12_dp"
                android:layout_marginTop="@dimen/margin_10_dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:paddingHorizontal="@dimen/margin_10_dp"
                android:paddingVertical="@dimen/margin_6_dp"
                android:text="@string/str_sign_up"
                android:textAlignment="center"
                android:textColor="@color/md_red_500" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>