<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.signup.SignUpFragment">

    <com.inetkr.base.presentation.custom.view.CustomHeaderView
        android:id="@+id/custom_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:leftDrawable="@drawable/ic_back"
        app:title="@string/sign_up" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/custom_header"
        android:clipChildren="false"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBirthday"
                style="@style/defaultInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/birthday"
                android:theme="@style/defaultInput"
                app:endIconDrawable="@drawable/ic_calendar"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="false"
                    android:gravity="top"
                    android:inputType="text"
                    android:longClickable="false"
                    android:textColor="@color/text_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/defaultInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_email"
                android:theme="@style/defaultInput"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/tilBirthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textEmailAddress"
                    android:maxLength="150"
                    android:textColor="@color/text_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/defaultInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_password"
                android:theme="@style/defaultInput"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textPassword"
                    android:maxLength="150"
                    android:textColor="@color/text_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordConfirm"
                style="@style/defaultInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/confirm_password"
                android:theme="@style/defaultInput"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textPassword"
                    android:maxLength="150"
                    android:textColor="@color/text_black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvSubtitlePassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/subtitle_password"
                android:textColor="@color/grey_subtitle"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/tilPasswordConfirm" />

            <TextView
                android:id="@+id/text_view_by_continuing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/language_agreement"
                android:textColor="@color/grey_subtitle"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitlePassword" />

            <TextView
                android:id="@+id/text_view_documents"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/text_view_by_continuing" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btSignUp"
                style="@style/AppApplyButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_45_dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:enabled="true"
                android:maxLines="1"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/text_view_documents" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>